Fix for broken layout on page /record/90901/9E6E34E4B98BE65F46E1FC52D1BE07599DFA31C2.html?start=2&query=title%3ALa+Gioconda&startPage=1&rows=24

--- a/src/main/webapp/themes/default/css/fulldoc.css
+++ b/src/main/webapp/themes/default/css/fulldoc.css
@@ -330,11 +330,12 @@ img.trigger{
 
 .item-metadata {
 	margin-bottom:	0.5em;
-	
+	word-break:		break-all;
+
 }
 
 .item-metadata a{
-	word-break:		break-word;
+	xxxword-break:		break-word;
 }
 
 .external.item-metadata {
